@@ -1,3 +1,6 @@
+Unreleased
+	* Support for lambda functions in Tasklets
+
 Version 2.3.1 Sun 5 November 2023 by luispedro
 	* jug: update for Python 3.12
 
